--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,42 @@
+body {
+    margin: 0px;
+}
+
+
 
 ul {
     list-style-type: none;
     overflow: hidden;
+    height: 80px;
     background-color: #333;
+     margin: 0px;
+    padding: 0px;
 }
 
 li {
     display: inline;
     float: right;
+    font-size: 20px;
+    
 }
 
 .logo {
     display: inline-block;
     text-align: center;
     float: left;    
+    font-size: 30px;
+    color: #ffffff;
+    padding: 20px;
 }
 
 li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 8px; 16px; 
+    padding-top: 25px; 
+    padding-bottom: 25px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 
@@ -31,6 +47,13 @@ li a:hover {
 
 footer {
     display: block;
+    background-color: #333;
+    height: 80px; 
+}
+
+.footer {
+    float: left;
+    color: #7e7777;
     text-align: center;
-    padding: 8px; 16px;
+    padding: 10px;
 }
