--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,22 @@ li a:hover {
     color: black;
 }
 
+
+main {
+    background-image: url("../images/hawaii-large.jpg");
+    background-size: 100% 100%;
+    width: 100%;
+    height: 500px;
+    margin: 0px 0px;
+    
+}
+
+#main_paragraph {
+    margin: 0px;
+    text-align: center;
+    color: #ffffff;
+    font-size: 80px;
+}
 footer {
     display: block;
     background-color: #333;
@@ -55,5 +71,5 @@ footer {
     float: left;
     color: #7e7777;
     text-align: center;
-    padding: 10px;
+    padding: 30px;
 }
