--- a/css/contact.css
+++ b/css/contact.css
@@ -51,26 +51,25 @@ main {
     height:500px;
 }
 
-ul#project_list {
+div#main_contents {
     list-style: none;
+    padding: 80px;
+    padding-top: 50px;
 }
 
-li#projects {
-    float: left;
-}
-#cal {
-    width: 200px;
-    height: 200px;
-    padding: 20px;
-    padding-bottom: 10px;
+ul#contact_ul {
+    
 }
 
-p#project_desc {
-    margin: 0px;
-    padding: 5px;
-    text-align: center;
+li#contact_list {
+    list-style: none;
+    padding: 10px;
 }
 
+img#contact_image {
+    width: 50px;
+    height: 50px;
+}
 footer {
     display: block;
     background-color: #333;
